--- a/photo/app/views/layouts/application.html.erb
+++ b/photo/app/views/layouts/application.html.erb
@@ -8,6 +8,16 @@
   </head>
   <body>
     <div id="container">
+      <div id="user_nav">
+        <% if current_user %>
+          <%= link_to "Edytuj profil", edit_uzytkownik_path(:current) %>
+          <%= link_to "Wyloguj", logout_path %>
+        <% else %>
+          <%= link_to "Rejestracja", new_uzytkownik_path %>
+          <%= link_to "Zaloguj", login_path %>
+        <% end %>
+      </div>
+
       <%- flash.each do |name, msg| -%>
         <%= content_tag :div, msg, :id => "flash_#{name}" %>
       <%- end -%>
