--- a/photo/public/stylesheets/application.css
+++ b/photo/public/stylesheets/application.css
@@ -20,6 +20,7 @@ a {
 
 #container {
   width: 75%;
+  height: 100%;
   margin: 0 auto;
   background-color: #FFF;
   padding: 20px 40px;
@@ -78,4 +79,9 @@ a {
 #errorExplanation ul li {
   font-size: 12px;
   list-style: disc;
+}
+
+div#user_nav {
+  float: right;
+  font-size: 0.9em;
 }
