--- a/photo/app/views/zdjecia/edit.html.erb
+++ b/photo/app/views/zdjecia/edit.html.erb
@@ -3,6 +3,6 @@
 <%= render :partial => 'form' %>
 
 <p>
-  <%= link_to "Pokaż", @zdjecie %>
-  <%= link_to "Pokaż wszystkie", zdjecia_path %>
+  <%= link_to "Pokaż to zdjęcie", @zdjecie %>
+  <%= link_to "Pokaż wszystkie zdjęcia", zdjecia_path %>
 </p>
