--- a/photo/app/views/zdjecia/index.html.erb
+++ b/photo/app/views/zdjecia/index.html.erb
@@ -29,5 +29,5 @@
 </li>
 <% end %>
 </ul>
+<p><%= link_to "Pokaż wszystkie zdjęcia", zdjecia_path %></p>
 
-<p><%= link_to "Dodaj zdjęcie", new_zdjecie_path %></p>
