--- a/photo/app/views/layouts/application.html.erb
+++ b/photo/app/views/layouts/application.html.erb
@@ -25,11 +25,11 @@
 
       <%- flash.each do |name, msg| -%>
         <%= content_tag :div, msg, :id => "flash_#{name}" %>
-      <%- end -%>
+      <% end %>
       
       <%- if show_title? -%>
         <h1><%=h yield(:title) %></h1>
-      <%- end -%>
+      <% end %>
       
       <%= yield %>
     </div>
