dodanie wyszukiwarki wg opisow, oprocz szukania wg tagow

--- a/photo/app/views/galerie/index.html.erb
+++ b/photo/app/views/galerie/index.html.erb
@@ -5,12 +5,23 @@
     <%= ajaxful_rating_style %>  
 <% end %>
 
+
+<% form_tag zdjecia_path, :method => 'get' do %>
+  <p>
+  <%= text_field_tag :szukaj_opisu, params[:szukaj_opisu] %>
+  <%= submit_tag "Szukaj zdjęć według ich opisu", :name => nil %>
+  </p>
+<% end %>
+
+
+<!--
 <% form_tag zdjecia_path, :method => 'get' do %>
   <p>
   <%= text_field_tag :search, params[:search] %>
   <%= submit_tag "Szukaj zdjęć", :name => nil %>
   </p>
 <% end %>
+-->
 
 Szukaj zdjęć według tagów:<br>
 <% for tag in @tags %>
