--- a/photo/app/views/galerie/new.html.erb
+++ b/photo/app/views/galerie/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render :partial => 'form' %>
 
-<p><%= link_to "Powrót do listy", galerie_path %></p>
+<p><%= link_to "Pokaż wszystkie galerie", galerie_path %></p>
