--- a/photo/app/views/komentarze/_form.html.erb
+++ b/photo/app/views/komentarze/_form.html.erb
@@ -8,5 +8,5 @@
     <%= f.label :tresc %><br />
     <%= f.text_area :tresc %>
   </p>
-  <p><%= f.submit "Submit" %></p>
+  <p><%= f.submit "Dodaj komentarz" %></p>
 <% end %>
