--- a/photo/app/views/zdjecia/show.html.erb
+++ b/photo/app/views/zdjecia/show.html.erb
@@ -1,4 +1,4 @@
-<% title "Zdjecie" %>
+<% title "Zdjęcie" %>
 
 <p>
   <strong>Opis:</strong>
@@ -13,7 +13,7 @@
 <% end %>
 <p>
     <% if @zdjecie.photo.exists? %>
-    <p><%= image_tag @zdjecie.photo.url(:small) %></p>
+    <p><%= image_tag @zdjecie.photo.url %></p>
     <% else %>
     <p> Brak zdjęcia, dodaj je. </p>
     <% end %>
