--- a/photo/app/views/uzytkownicy/_uzytkownik.html.erb
+++ b/photo/app/views/uzytkownicy/_uzytkownik.html.erb
@@ -1,6 +1,6 @@
 <% form_for @uzytkownik do |form| %>
   <%= form.error_messages %>
-  <ol class="formlist">
+  <ul class="formlist">
     <li>
       <%= form.label :login, "Login" %>
       <%= form.text_field :login %>
