--- a/photo/app/views/zdjecia/show.html.erb
+++ b/photo/app/views/zdjecia/show.html.erb
@@ -1,8 +1,8 @@
 <% title "Zdjęcie" %>
 
 <p>
-  <strong>Opis:</strong>
-  <%=h @zdjecie.opis %>
+<strong>Opis:</strong>
+<%=h @zdjecie.opis %>
 
 </p>
 <p>
@@ -12,19 +12,20 @@
   Twoja ocena: <%= ratings_for @zdjecie, :force_static => true, :dimension => :ocena, :small => true, :show_user_rating => true %>
 <% end %>
 <p>
-    <% if @zdjecie.photo.exists? %>
-    <p><%= image_tag @zdjecie.photo.url(:small) %></p>
-    <% else %>
-    <p> Brak zdjęcia, dodaj je. </p>
-    <% end %>
+<% if current_user && current_user[:login] == @zdjecie.galeria.autor %>
+  <% link_to edit_zdjecie_path(@zdjecie) do %>
+  <%= render :partial => 'image' %>
+  <% end %>
+<% else %>
+  <%= render :partial => 'image' %>
+<% end %>
 </p>
 <p>
-  <%= link_to "Edycja", edit_zdjecie_path(@zdjecie) %> 
-  <%#= link_to "Usuń", @zdjecie, :confirm => 'Na pewno usunąć to zdjęcie?', :method => :delete %> |
-  <%= link_to "Pokaż wszystkie zdjęcia", zdjecia_path %>
+<%#= link_to "Usuń", @zdjecie, :confirm => 'Na pewno usunąć to zdjęcie?', :method => :delete %> 
+<%= link_to "Pokaż wszystkie zdjęcia", zdjecia_path %>
 </p>
 <p> 
-  <%= link_to "Pokaż całą tę galerię", { :controller => "galerie", :action => "show", :id => @zdjecie.galeria_id} %>
+<%= link_to "Pokaż całą tę galerię", { :controller => "galerie", :action => "show", :id => @zdjecie.galeria_id} %>
 </p>
 <p>
 <strong>Tagi:</strong>
@@ -42,14 +43,14 @@
   <% if current_user %>
     <%= f.hidden_field :autor, :value => current_user[:login] %>
   <% else %>
-  <p>
+    <p>
     <%= f.label :autor, "Autor" %><br />
     <%= f.text_field :autor %>
     </p>
   <% end %>
   <p>
-    <%= f.label :tresc, "Treść" %><br />
-    <%= f.text_area :tresc %>
-    </p>
-    <p> <%= f.submit "Dodaj komentarz" %> <p> 
+  <%= f.label :tresc, "Treść" %><br />
+  <%= f.text_area :tresc %>
+  </p>
+  <p> <%= f.submit "Dodaj komentarz" %> <p> 
 <% end %>
