dodałem kategorie zdjęć

--- a/photo/app/views/layouts/application.html.erb
+++ b/photo/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
     <div id="container">
       <div id="page_nav">
         <%= link_to "Home", root_url %>
+        <%= link_to "Kategorie", kategorie_path %>
       </div>
       <div id="user_nav">
         <% if current_user %>
