--- a/photo/app/views/galerie/index.html.erb
+++ b/photo/app/views/galerie/index.html.erb
@@ -1,47 +1,93 @@
 <% title "Galerie zdjęć" %>
 
-<% form_tag zdjecia_path, :method => 'get' do %>
-  <p>
-  <%= text_field_tag :szukaj_opisu, params[:szukaj_opisu] %>
-  <%= submit_tag "Szukaj zdjęć według ich opisu", :name => nil %>
-  </p>
+<% content_for :head do %>
+  <%= stylesheet_link_tag 'style' %>
+  <style>
+    .thumb {
+      width: 150px;
+      height: 105px;
+    }
+    .thumbflat {
+      width: 142px;
+      height: 50px;
+    }
+  </style>
 <% end %>
 
-Szukaj zdjęć według tagów:<br>
-<% for tag in @tags %>
-  <%= link_to tag.name, { :controller => 'zdjecia',  :action => 'index', :search => tag.name} %>
-<% end %>
-<br><br>
-
-
-<table>
-  <% for galeria in @galerie %>
-    <tr>
-      <td><%=h galeria.nazwa %></td>
-      <td><%=h galeria.autor %></td>
-      <td><%=h galeria.opis %></td>
-	  <td>
-        <%# pokazanie pierwszego zdjecia z galerii %>
-        <% link_to galeria do %>
-	  	<% if galeria.zdjecia.exists? %>
-          <%= image_tag galeria.zdjecia.find(:first).photo.url(:thumb) %>
-        <% end %>
-        <% end %>
-      </td>
-      <% if current_user && current_user[:login] == galeria.autor %>
-      <td><ul>
-          <li><%= link_to "Pokaż galerię", galeria %>
-          <li><%= link_to "Edytuj opis galerii", edit_galeria_path(galeria) %>
-          <li><%= link_to "Usuń galerię", galeria, :confirm => 'Na pewno usunąć tę galerię?', :method => :delete %>
-          <li><%= link_to "Dodaj zdjęcie", { :controller => 'zdjecia',  :action => 'new', :nr_galerii => galeria.id} %>
-          <li><%= link_to "Edytuj/usuń zdjęcie", { :action => "show", :id => galeria.id, :kasowanie => "tak" } %>
-      </ul></td>
+<div id="menu">
+  <ul>
+    <li><%= link_to "HOME", root_url %></li> 
+    <li><%= link_to "KATEGORIE", kategorie_path, :class => :selected %></li>
+    <% if current_user %>
+      <li><%= link_to "GALERIE", galerie_path %></li>
     <% end %>
-    </tr>
+  </ul>
+</div>
+
+<div id="site_content">
+  <div id="side_menu">
+    <% for galeria in @galerie %>
+      <% if galeria.zdjecia.exists? %>
+        <div class="side_menu_item">
+          <% link_to galeria do %>
+            <%= image_tag galeria.zdjecia.find(:first).photo.url(:thumb), :class => :thumbflat %>
+          <% end %>
+          <span><%= h galeria.nazwa %></span>
+        </div>
+      <% end %>
+    <% end %>
+  </div>
+  <div id="content">
+    <h1>Galeria: <%= @galerie.first.nazwa %></h1>
+    <h2>Opis: <%= @galerie.first.opis %></h2>
+
+    <% if current_user && current_user[:login] == @galerie.first.autor %>
+      <ul>
+          <li><%= link_to "Edytuj opis galerii", edit_galeria_path(@galerie.first) %>
+          <li><%= link_to "Usuń galerię", @galerie.first, :confirm => 'Na pewno usunąć tę galerię?', :method => :delete %>
+          <li><%= link_to "Dodaj zdjęcie", { :controller => 'zdjecia',  :action => 'new', :nr_galerii => @galerie.first.id} %>
+      </ul>
+    <% end %>
+    <ul>
+      <% for zdjecie in @galerie.first.zdjecia.all %>
+        <li>
+        <% link_to zdjecie do %>
+          <%= image_tag zdjecie.photo.url(:thumb), :class => :thumb %>
+          </li>
+        <% end %>
+      <% end %>
+    </ul>
+  </div>
+</div>
+<% if false %>
+  <table>
+    <% for galeria in @galerie %>
+      <tr>
+        <td><%=h galeria.nazwa %></td>
+        <td><%=h galeria.autor %></td>
+        <td><%=h galeria.opis %></td>
+        <td>
+          <%# pokazanie pierwszego zdjecia z galerii %>
+          <% link_to galeria do %>
+            <% if galeria.zdjecia.exists? %>
+              <%= image_tag galeria.zdjecia.find(:first).photo.url(:thumb) %>
+            <% end %>
+          <% end %>
+        </td>
+        <% if current_user && current_user[:login] == galeria.autor %>
+          <td><ul>
+              <li><%= link_to "Pokaż galerię", galeria %>
+              <li><%= link_to "Edytuj opis galerii", edit_galeria_path(galeria) %>
+              <li><%= link_to "Usuń galerię", galeria, :confirm => 'Na pewno usunąć tę galerię?', :method => :delete %>
+              <li><%= link_to "Dodaj zdjęcie", { :controller => 'zdjecia',  :action => 'new', :nr_galerii => galeria.id} %>
+              <li><%= link_to "Edytuj/usuń zdjęcie", { :action => "show", :id => galeria.id, :kasowanie => "tak" } %>
+          </ul></td>
+        <% end %>
+      </tr>
+    <% end %>
+  </table>
+  <% if current_user %>
+    <p><%= link_to "Utwórz nową galerię", new_galeria_path %></p>
   <% end %>
-</table>
-<% if current_user %>
-  <p><%= link_to "Utwórz nową galerię", new_galeria_path %></p>
-  <p> <%=h current_user[:login] %>
+  <p><%= link_to "Pokaż wszystkie zdjęcia", zdjecia_path %></p>
 <% end %>
-<p><%= link_to "Pokaż wszystkie zdjęcia", zdjecia_path %></p>
