--- a/photo/app/views/layouts/application.html.erb
+++ b/photo/app/views/layouts/application.html.erb
@@ -1,37 +1,54 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE HTML>
 <html>
   <head>
-    <title><%= h(yield(:title) || "Untitled") %></title>
-    <%= stylesheet_link_tag 'application' %>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
+    <title><%= h(yield(:title) || "Rails Photo") %></title>
+    <%= stylesheet_link_tag 'colour' %>
+    <%= stylesheet_link_tag 'style' %>
     <%= javascript_include_tag :defaults %>
     <%= ajaxful_rating_style %>  
     <%= yield(:head) %>
   </head>
   <body>
     <div id="container">
-      <div id="page_nav">
-        <%= link_to "Home", root_url %>
-        <%= link_to "Kategorie", kategorie_path %>
-      </div>
-      <div id="user_nav">
-        <% if current_user %>
-          <%= link_to "Edytuj profil", edit_uzytkownik_path(:current) %>
-          <%= link_to "Wyloguj", logout_path %>
-        <% else %>
-          <%= link_to "Rejestracja", new_uzytkownik_path %>
-          <%= link_to "Zaloguj", login_path %>
-        <% end %>
-      </div>
+      <% if false %>
+        <div id="page_nav">
+          <%= link_to "Home", root_url %>
+          <%= link_to "Kategorie", kategorie_path %>
+        </div>
+        <div id="user_nav">
+          <% if current_user %>
+            <%= link_to "Edytuj profil", edit_uzytkownik_path(:current) %>
+            <%= link_to "Wyloguj", logout_path %>
+          <% else %>
+            <%= link_to "Rejestracja", new_uzytkownik_path %>
+            <%= link_to "Zaloguj", login_path %>
+          <% end %>
+        </div>
+      <% end %>
 
+      <div id="logo">
+        <h1>railsphoto</h1>
+        <div id="links">
+          <% if current_user %>
+            <%= link_to "Edytuj profil", edit_uzytkownik_path(:current) %>
+            <%= link_to "Wyloguj", logout_path %>
+          <% else %>
+            <%= link_to "Rejestracja", new_uzytkownik_path %>
+            <%= link_to "Zaloguj", login_path %>
+          <% end %>
+        </div>
+      </div>
       <%- flash.each do |name, msg| -%>
         <%= content_tag :div, msg, :id => "flash_#{name}" %>
       <% end %>
-      
+
+      <% if false %>
       <%- if show_title? -%>
         <h1><%=h yield(:title) %></h1>
       <% end %>
-      
+    <% end %>
+
       <%= yield %>
     </div>
   </body>
