--- a/photo/app/views/zdjecia/edit.html.erb
+++ b/photo/app/views/zdjecia/edit.html.erb
@@ -1,8 +1,19 @@
 <% title "Edycja Zdjęcia" %>
 
-<%= render :partial => 'form' %>
+<div id="menu">
+  <ul>
+    <li><%= link_to "HOME", root_url %></li> 
+    <li><%= link_to "KATEGORIE", kategorie_path %></li>
+    <% if current_user %>
+      <li><%= link_to "MOJE GALERIE", galerie_path %></li>
+    <% end %>
+  </ul>
+</div>
+<div id="site_content">
+  <%= render :partial => 'form' %>
 
-<p>
+  <p>
   <%= link_to "Pokaż to zdjęcie", @zdjecie %>
   <%= link_to "Pokaż wszystkie zdjęcia", zdjecia_path %>
-</p>
+  </p>
+</div>
