--- a/photo/public/stylesheets/style.css
+++ b/photo/public/stylesheets/style.css
@@ -1,5 +1,15 @@
 /* global */
-html{height: 100%;}
+
+@font-face
+{
+    font-family: kunstler script;
+    src: url(kuenstl1.ttf);
+}
+
+html
+{
+    height: 100%;
+}
 
 body
 { font-family: verdana, arial, sans-serif;
@@ -9,155 +19,183 @@ body
 }
 
 p
-{ margin: 0px;
-  padding: 0px 0px 16px 0px;
-  line-height: 1.7em;
+{ 
+    margin: 0px;
+    padding: 0px 0px 16px 0px;
+    line-height: 1.7em;
 }
 
 h1
-{ font-family: arial, sans-serif;
-  letter-spacing: .1em;
-  font-weight: normal;
-  text-transform: uppercase;
-  padding: 16px 0px 5px 0px; 
-  margin: 0px 0px 12px 0px; 
-  border-bottom: 1px solid;
-  font-size: 150%;
+{
+    font-family: arial, sans-serif;
+    letter-spacing: .1em;
+    font-weight: normal;
+    padding: 16px 0px 5px 0px;
+    margin: 0px 0px 12px 0px;
+    border-bottom: 1px solid;
+    font-size: 150%;
 }
 
 .sub
-{ font-size: 55%;
-  padding-left: 12px; 
-  letter-spacing: .1em;
+{
+    font-size: 55%;
+    padding-left: 12px;
+    letter-spacing: .1em;
 }
 
 img
-{ border: 0px; 
-  margin: 0px; 
-  padding: 0px;
+{ 
+    border: 0px;
+    margin: 0px;
+    padding: 0px;
 }
 
-a{outline: none;}
+a
+{
+    outline: none;
+}
 
 /* block quote */
+
 blockquote
-{ margin: 20px 0px 20px 0px; 
-  padding: 10px 20px 0px 20px;
-  border-left: 8px solid;
+{
+    margin: 20px 0px 20px 0px;
+    padding: 10px 20px 0px 20px;
+    border-left: 8px solid;
 }
 
 /* unordered list */
 ul
-{ margin: 2px 0px 18px 16px;
-  padding: 0px;
+{
+    margin: 2px 0px 18px 16px;
+    padding: 0px;
 }
 
 ul li
-{ list-style-type: square;
-  margin: 0px 0px 6px 0px; 
-  padding: 0px;
+{
+    list-style-type: square;
+    margin: 0px 0px 6px 0px;
+    padding: 0px;
 }
 
 /* ordered list */
 ol
-{ margin: 8px 0px 0px 24px;
-  padding: 0px;
+{
+    margin: 8px 0px 0px 24px;
+    padding: 0px;
 }
 
 ol li
-{ margin: 0px 0px 11px 0px; 
-  padding: 0px;
+{
+    margin: 0px 0px 11px 0px;
+    padding: 0px;
 }
 
 /* margin lefts / margin rights - to centre content */
+
+
 #logo, #menu, #site_content
-{ margin-left: auto; 
-  margin-right: auto;
+{
+    margin-left: auto;
+    margin-right: auto;
 }
 
 /* logo */
 #logo
-{ width: 880px;
-  height: 95px;
-  border-top: 5px solid;
+{
+    width: 880px;
+    height: 95px;
+    border-top: 5px solid;
+
 }
 
 #logo h1
-{ font-family: century gothic, sans-serif;
-  font-size: 600%;
-  text-transform: lowercase;
-  font-weight: normal;
-  padding: 0px 0px 0px 14px;
-  border: 0px;
-  float: left;
-  letter-spacing: 0px;
+{
+    font-family: KuenstlerScript-Medium;
+    font-size: 600%;
+    font-weight: normal;
+    padding: 0px 0px 0px 14px;
+    border: 0px;
+    float: left;
+    letter-spacing: 0px;
 }
 
 #links
-{ margin: 15px 9px 0px 0px;
-  font-size: 80%;
-  text-align: right;
-  padding: 20px 10px 0px 0px;
-  text-transform: uppercase;
+{
+    margin: 15px 9px 0px 0px;
+    font-size: 80%;
+    text-align: right;
+    padding: 20px 10px 0px 0px;
+    text-transform: uppercase;
 }
 
 #links a, #links a:hover
-{ padding: 0px 0px 2px 0px;
-  text-decoration: none;
+{
+    padding: 0px 0px 2px 0px;
+    text-decoration: none;
 }
 
 /* navigation menu */
 #menu
-{ height: 44px;
-  width: 880px;
-  border-bottom: 2px solid;
+{
+    height: 44px;
+    width: 880px;
+    border-bottom: 2px solid;
 }
 
-#menu ul{margin: 0px auto;} 
+#menu ul{
+    margin: 0px auto;
+} 
 
 #menu li
-{ float: left; 
-  margin: 0px; 
-  padding: 0px;
-  list-style: none;
+{
+    float: left;
+    margin: 0px;
+    padding: 0px;
+    list-style: none;
 } 
 
 #menu li a 
-{ display: block;
-  float: left;
-  height: 38px;
-  text-decoration: none; 
-  padding: 6px 19px 0px 19px;
-  border-right: 2px solid;
-  font-weight: bold;
+{
+    display: block;
+    float: left;
+    height: 38px;
+    text-decoration: none;
+    padding: 6px 19px 0px 19px;
+    border-right: 2px solid;
+    font-weight: bold;
 } 
-
-#colours
-{ height: 0px;
-  text-align: right;
-  padding: 16px 16px 0px 300px;
-}
 
 /* main content */
 #site_content
-{ width: 878px;
-  overflow: hidden;
-  border-right: 1px solid;
-  border-bottom: 1px solid;
-  border-left: 1px solid;
+{
+    width: 878px;
+    overflow: hidden;
+    border-right: 1px solid;
+    border-bottom: 1px solid;
+    border-left: 1px solid;
 } 
 
 /* side menu */
 #side_menu
-{ padding: 22px 3px 10px 19px;
-  float: left; 
-  width: 170px;
+{
+    padding: 22px 3px 10px 19px;
+    float: left;
+    width: 170px;
+    border-left: 1px solid;
+}
+
+#side_menu h1
+{
+    color: black;
+    border-bottom: none;
 }
 
 .side_menu_item
-{ width: 170px; 
-  padding: 6px 0px 8px 0px;
-  height: 70px;
+{
+    width: 170px;
+    padding: 6px 0px 8px 0px;
+    height: 70px;
 }
 
 .side_menu_item a
@@ -176,20 +214,25 @@ ol li
   float: left;
 }
 
-/* page content */
-#content
-{ text-align: left;
-  width: 653px;
-  float: left;
-  padding: 12px 0px 18px 14px;
+h2
+{
+    margin-left: 400px;
 }
 
-#content a, #content a:hover{text-decoration: none;}
+/* page content */
+#content
+{
+    text-align: left;
+    width: 653px;
+    float: left;
+    padding: 50px 0px 18px 14px;
+}
 
 /* form */
 form
-{ margin: 3px 0px 0px 0px; 
-  padding: 0; 
+{
+    margin: 3px 0px 0px 0px;
+    padding: 0;
 }
 
 form#contact{height: 220px;}
@@ -225,3 +268,44 @@ div.row1 span.forminput
   height: 22px;
   cursor: pointer;
 }
+
+/* kategorie - Photo gallery template ||| Joshuaink.com ||| March 2005 ||| Free to use but this credit must remain in place */
+
+
+#content li{
+    width:160px;
+    border:solid #CCC;
+    border-width:0 1px 1px 0;
+    /* uncomment and adjust this if you want a rounded frame in Mozilla browsers
+	moz-border-radius:20px;
+    */
+    background:#FFF;
+    padding:10px;
+    text-align:center;
+    position:relative;
+    float:left;
+    display:inline;
+    margin:5px;
+}
+
+
+#content a span{	
+    /*\*/
+    position:absolute;
+    left:-9999px;
+    top:0px;
+    left:0px;
+    width:180px;
+    font-weight:bold;
+    background:#FFF;
+    color:#999;
+    padding:5px 0 5px 0;
+    text-transform:uppercase;
+    font-size:80%;
+    border:1px solid #EEE;
+    border-width:0 0 10px 0;
+    filter: alpha(opacity=100);
+    /*-moz-opacity:.8;
+		opacity:.80;*/
+    /**/
+} 
