--- a/photo/app/views/kategorie/show.html.erb
+++ b/photo/app/views/kategorie/show.html.erb
@@ -18,7 +18,9 @@
   <ul>
     <li><%= link_to "HOME", root_url %></li> 
     <li><%= link_to "KATEGORIE", kategorie_path, :class => :selected %></li>
-    <li><%= link_to "GALERIE", galerie_path %></li>
+    <% if current_user %>
+      <li><%= link_to "MOJE GALERIE", galerie_path %></li>
+    <% end %>
   </ul>
 </div>
 
