--- a/photo/app/views/galerie/new.html.erb
+++ b/photo/app/views/galerie/new.html.erb
@@ -1,5 +1,6 @@
 <% title "Nowa Galeria" %>
-
+<div id="site_content">
 <%= render :partial => 'form' %>
 
 <p><%= link_to "Pokaż wszystkie galerie", galerie_path %></p>
+</div>
