--- a/photo/app/views/markery/new.html.erb
+++ b/photo/app/views/markery/new.html.erb
@@ -1,8 +1,24 @@
-<h1>Nowy marker</h1>
+<% content_for :head do %>
+  <%= stylesheet_link_tag 'style' %>
 
+  <%= GMap.header %>
+  <%= @map.to_html %>
+<% end %>
+
+<div id="menu">
+  <ul>
+    <li><%= link_to "HOME", root_url %></li> 
+    <li><%= link_to "KATEGORIE", kategorie_path %></li>
+    <% if current_user %>
+      <li><%= link_to "MOJE GALERIE", galerie_path %></li>
+    <% end %>
+  </ul>
+</div>
+<div id="site_content">
+  <%= @map.div(:width => 878, :height => 400) %>
 <% form_for(@marker) do |f| %>
   <%= f.error_messages %>
-
+  <h2> Pozycja na mapie: </h2>
   <p>
   <%= f.label :wysokosc %><br />
   <%= f.text_field :wysokosc %>
@@ -11,7 +27,24 @@
   <%= f.label :szerokosc %><br />
   <%= f.text_field :szerokosc %>
   </p>
+  <p>
+  <%= link_to_function "Sprawdz"  do |page| 
+    @map = Variable.new("map")
+
+    page << "var wysokosc = $('marker_wysokosc').value;"
+    page << "var szerokosc = $('marker_szerokosc').value;"
+    @x = Variable.new("wysokosc")
+    @y = Variable.new("szerokosc")
+
+    page << @map.add_overlay(GMarker.new(GLatLng.new([@x, @y]),:title => "Hello again!"))
+    
+    page << @map.set_center(GLatLng.new([@x, @y]), 12)
+  
+  end
+%>
+  </p>
   <% f.fields_for :galerie do |builder| %>
+    <h2> Galeria: </h2>
     <p>
     <%= builder.hidden_field :autor, :value => current_user[:login] %>
     </p>
@@ -31,3 +64,4 @@
 <% end %>
 
 <%= link_to 'Wróc', galerie_path  %>
+</div>
